@@ -9,9 +9,10 @@ To do:
 	- How to take different ticks
 		- calculate hurst as test first, can get historical data
 	- How ADF tests
-	-
+
 
 '''
+tick_distance = "5S"
 
 class meanrevertstrat(object):
 	def __init__():
@@ -26,4 +27,9 @@ class meanrevertstrat(object):
 		self.position = 0
 		if event.type == "TICK":
             self.ticks += 1
+            self.data = self.data.append(
+                    pd.DataFrame({"ticks": [self.ticks], "time": [event.time], "ask": [event.ask]}))
+           	resam = self.data.resample(tick_distance).last()
+            resam["returns"] = np.log(resam["ask"]/resam["ask"].shift(1))
+		
 		pass
