@@ -116,5 +116,7 @@ https://www.quantopian.com/posts/some-code-from-ernie-chans-new-book-implemented
 
 24/04/2017
 Reorganize GitHub into folders for easy future reference. 
-#TODO: change import in major .py programs to reflect new changes. 
+#TODO: 
+- change import in major .py programs to reflect new changes. 
+- create a readme for statistical tests for instructions.
 
